--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlp6C2mIXKwN/RzE5B7LbC",
+      "authorship_tag": "ABX9TyNhlWICyQegr6eWQJzLc1UJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,11 +81,11 @@
         "print('reprovados:', reprovador)\n"
       ],
       "metadata": {
-        "id": "PVK2fEAyK3EC",
-        "outputId": "e90dbee3-8761-4910-bc9a-f0f2b72811ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PVK2fEAyK3EC",
+        "outputId": "e90dbee3-8761-4910-bc9a-f0f2b72811ae"
       },
       "execution_count": 8,
       "outputs": [
@@ -101,12 +101,176 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Criar um programa que lista os numeros de 1 a 10\n",
+        "#para issto, precisaremos de um contador\n",
+        "#while=enquanto\n",
+        "cont = 1\n",
+        "numeros = []\n",
+        "\n",
+        "while (cont <=10):\n",
+        "  numeros.append(cont)\n",
+        "  cont += 1\n",
+        "\n",
+        "numeros\n"
+      ],
       "metadata": {
-        "id": "xzQBFSb3QDIL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xzQBFSb3QDIL",
+        "outputId": "09328389-5097-46ac-b8a6-4c461fe9b641"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#modifique o codigo anterior, para solicitar um tamanho de lista\n",
+        "#X e com o laço while, crie a nova lista, do tamanho desejado.\n",
+        "cont = 1\n",
+        "numeros = []\n",
+        "tamanho = int(input('Digite man o tamain da lista namoral:'))\n",
+        "\n",
+        "\n",
+        "while (cont <= tamanho):\n",
+        "  numeros.append(cont)\n",
+        "  cont += 1\n",
+        "\n",
+        "numeros"
+      ],
+      "metadata": {
+        "id": "VlcJMlgfSVmF",
+        "outputId": "2a4e869a-db42-4938-a98f-2f2fd644aa0c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Digite man o tamain da lista namoral:4\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#inserir nomes de cidades.\n",
+        "#o laço encerra, quando digitar 0.\n",
+        "#! e = e para falar diferente!!\n",
+        "cidades = []\n",
+        "city = input(' Digite o nome de uma cidade ')\n",
+        "\n",
+        "while(city != '0'):\n",
+        "  cidades.append(city)\n",
+        "  city = input(' Digite o nome de uma cidade ')\n",
+        "\n",
+        "\n",
+        "\n",
+        "cidades\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "_0wlLTBZUxJf",
+        "outputId": "cf40027c-1d9a-4273-ab49-f400024761a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " Digite o nome de uma cidade 0\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#digite um numero e faca ele dizer se ele e impar ou par!!\n",
+        "numeros = []\n",
+        "num = int(input('Digite um numero : '))\n",
+        "\n",
+        "while(num >= 0):\n",
+        "  if(num % 2 == 0):\n",
+        "    print('E par ')\n",
+        "    num = int(input('Digite um numero : '))\n",
+        "  else:\n",
+        "    print('E impar')\n",
+        "    num = int(input('Digite um numero : '))\n",
+        "\n",
+        "print('Acabou o codigo')"
+      ],
+      "metadata": {
+        "id": "9n2Djdc5YE_p",
+        "outputId": "f9808800-6c4a-4e5f-875c-bf6a30fb524c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um numero : 30\n",
+            "E par \n",
+            "Digite um numero : 30\n",
+            "E par \n",
+            "Digite um numero : 56\n",
+            "E par \n",
+            "Digite um numero : 97\n",
+            "E impar\n",
+            "Digite um numero : 30\n",
+            "E par \n",
+            "Digite um numero : -8\n",
+            "Acabou o codigo\n"
+          ]
+        }
+      ]
     }
   ]
 }
